--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="about">
       <a href="#" title="Возможности" onclick="slowScroll('#main')">Возможности</a>
       <a href="#" onclick="slowScroll('#overview')" title="Покупка">Покупка</a>
+      <a href="blog.html">Мой блог</a>
     </div>
   </header>
 
